SUBDIRS = src test

pkgconfig_DATA = nxcomp.pc

MAINTAINERCLEANFILES =			\
    $(srcdir)/autom4te.cache/*		\
    $(srcdir)/build-aux/*		\
    $(srcdir)/Makefile.in		\
    $(srcdir)/src/Makefile.in		\
    $(srcdir)/aclocal.m4		\
    $(srcdir)/config.h.in		\
    $(srcdir)/config.h.in~		\
    $(srcdir)/configure			\
    $(srcdir)/m4/libtool.m4		\
    $(srcdir)/m4/lt~obsolete.m4		\
    $(srcdir)/m4/ltoptions.m4		\
    $(srcdir)/m4/ltsugar.m4		\
    $(srcdir)/m4/ltversion.m4		\
    $(NULL)

DISTCLEANFILES=$(MAINTAINERCLEANFILES)
