SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = nxcompshad.pc

MAINTAINERCLEANFILES =			\
    $(srcdir)/Makefile.in		\
    $(srcdir)/src/Makefile.in		\
    $(srcdir)/aclocal.m4		\
    $(srcdir)/config.h.in		\
    $(srcdir)/build-aux/compile		\
    $(srcdir)/build-aux/config.guess	\
    $(srcdir)/build-aux/config.sub	\
    $(srcdir)/build-aux/depcomp		\
    $(srcdir)/build-aux/install-sh	\
    $(srcdir)/build-aux/ltmain.sh	\
    $(srcdir)/build-aux/missing		\
    $(srcdir)/build-aux/mkinstalldirs	\
    $(srcdir)/m4/libtool.m4		\
    $(srcdir)/m4/lt~obsolete.m4		\
    $(srcdir)/m4/ltoptions.m4		\
    $(srcdir)/m4/ltsugar.m4		\
    $(srcdir)/m4/ltversion.m4		\
    $(NULL)

DISTCLEANFILES=$(MAINTAINERCLEANFILES)
