SUBDIRS = src man

MAINTAINERCLEANFILES =			\
    $(srcdir)/Makefile.in		\
    $(srcdir)/man/Makefile.in		\
    $(srcdir)/src/Makefile.in		\
    $(srcdir)/aclocal.m4		\
    $(srcdir)/config.h.in		\
    $(srcdir)/compile			\
    $(srcdir)/config.guess		\
    $(srcdir)/config.sub		\
    $(srcdir)/depcomp			\
    $(srcdir)/install-sh		\
    $(srcdir)/ltmain.sh			\
    $(srcdir)/missing			\
    $(srcdir)/mkinstalldirs		\
    $(srcdir)/m4/libtool.m4		\
    $(srcdir)/m4/lt~obsolete.m4		\
    $(srcdir)/m4/ltoptions.m4		\
    $(srcdir)/m4/ltsugar.m4		\
    $(srcdir)/m4/ltversion.m4		\
    $(NULL)

DISTCLEANFILES=$(MAINTAINERCLEANFILES)