SUBDIRS = src man

MAINTAINERCLEANFILES =			\
    $(srcdir)/autom4te.cache/*		\
    $(srcdir)/build-aux/*		\
    $(srcdir)/Makefile.in		\
    $(srcdir)/man/Makefile.in		\
    $(srcdir)/src/Makefile.in		\
    $(srcdir)/aclocal.m4		\
    $(srcdir)/config.h.in		\
    $(srcdir)/config.h.in~		\
    $(srcdir)/config.guess		\
    $(srcdir)/config.sub		\
    $(srcdir)/configure			\
    $(NULL)

DISTCLEANFILES=$(MAINTAINERCLEANFILES)